[backport] Passive heuristics should enter degen GC, not full GC